crystal-facet-uml (1.13.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * improved auto-layout of relationship labels

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 19 May 2019 20:30:00 +0200

crystal-facet-uml (1.12.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Packageing warnings of lintian addressed

 -- Andreas Warnke <cfu@andreaswarnke.de>  Wed, 15 May 2019 20:30:00 +0200
 
Old Changelog:
    
2019-04-27 1.12.0 [8f17811]
  + operations and properites do not overlap with class/interface compartments
  + linebreaks in classifier names are possible
  + component and artifact icons do not overlap with the label
  + activities and states better embrace their children classifiers
  + labels of ports and interfaces and relationships are layouted avoiding overlaps
2019-03-10 1.11.0 [29089a8]
  + export dialog allows to select multiple file formats simultaneously
  + docbook export
  + html export
  . embunit replaced by own test functions to comply to debian packaging rules
2019-02-03 1.10.0 [9899988]
  + new classifier types for activity, state, Interaction-Overview and parametric diagrams
  + part, artifact, node and object are automatically underlined as instance
  + objects and parts are always instances
  . sqlite3 is linked dynamically
  + symbols for interruptable region, diagram reference, decision, fork, join, timeout, send-sig, rcv-event, history
2019-01-17 1.9.0 [43d5e15]
  + the database check can repair circular diagram-parent references
  + user experience improvements at using text-edit widgets
  + communication diagram does select/highlight classifiers in edit mode but lifelines in create mode
  . lifeline properties cannot be changed anymore
  + include, extends, deploy, manifest relationships show their stereotype
  + refine and trace relations exist for requirements
  + component interfaces are rendered as circle and half-circle
  + new label-positioning of ports
2019-01-01 1.8.0 [9dae9d7]