@@ -2,11 +2,13 @@ ideas for future versions:
   @gui
   [ ] paste: Allow to paste relationships
   [ ] paste: Keep structure of diagrams and contained elements when pasting objects
-  [ ] lock classifiers: It shall be possible to lock classifiers so that they are not moved accidentially in many diagrams.
+  [?] lock classifiers: It shall be possible to lock classifiers so that they are not moved accidentially in many diagrams.
   [ ] performance optimization: redraw only when shown(=visible) items have changed.
   [ ] a very long description shall not resize the window. (maybe scrollbars, maybe smaller font size, ...)
   [ ] a "saveAs" or export-as-cfu1 command should allow to copy the current db
   [ ] clicking into the current diagram in navigation view shall zoom to edit mode; duplicate eye button to get back
+  [ ] the type drop down box needs icons to faster find the right type
+  [ ] next to the about button, a help button is needed hat can provide context-sensitive information.
   @gui+ctrl
   [ ] When undoing/redoing things, switch to a diagram where you see the changes
   @pencil
@@ -22,8 +24,10 @@ ideas for future versions:
   @io
   [ ] export formats: extend export formats by latex, doxygen, asciidoc, rtf(?), pdf
   [ ] suppress exporting descriptions of hidden relationships and features
+  [ ] how to exclude diagrams from export? some are unimportant and exist just for completeness
   @data
   [ ] nodes and artifacts can either be concepts or anonymous instances. named-instances are not yet supported.
+  [ ] some diagrams exist for completeness only - but do not contain important information. These shall be greyed out.
   @ctrl
   [ ] export XMI format
   [ ] import XMI format
@@ -33,3 +37,4 @@ ideas for future versions:
   [ ] remove the -f option again - db formats shall be converted automatically
 
 candidates for version 1.13.0 are marked with "!"
+ideas that are likely to be rejected are marked with "?"
