@@ -2,6 +2,7 @@ crystal-facet-uml (1.13.0) UNRELEASED; urgency=medium
 
   [ Andreas Warnke ]
   * improved auto-layout of relationship labels
+  * call/transition to self is layouted nicely in sequence/timing diagrams
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 19 May 2019 20:30:00 +0200
 
@@ -11,9 +12,9 @@ crystal-facet-uml (1.12.1) UNRELEASED; urgency=medium
   * Packageing warnings of lintian addressed
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Wed, 15 May 2019 20:30:00 +0200
- 
+
 Old Changelog:
-    
+
 2019-04-27 1.12.0 [8f17811]
   + operations and properites do not overlap with class/interface compartments
   + linebreaks in classifier names are possible
